# attention-visualiser

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
attention_visualiser/: __init__.py  base.py  pt.py  visualiser.py
docs/: attention_visualiser.html  index.html  search.js
docs/attention_visualiser/: base.html  visualiser.html
tests/: test_pt.py  test_visualiser.py
visualiser/: base.py
