[project]
name = "attention-visualiser"
version = "0.1.1"
description = "a module to visualise attention layer activations from transformer based models from huggingface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.1",
    "loguru>=0.7.3",
    "seaborn>=0.13.2",
    "transformers>=4.51.3",
]
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://codeberg.org/rashomon/attention-visualiser"
"Repository" = "https://codeberg.org/rashomon/attention-visualiser.git"
"Issues" = "https://codeberg.org/rashomon/attention-visualiser/issues"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["attention-visualiser"]
